--- a/SimpleRpa/src/main/resources/templates/update-work.html
+++ b/SimpleRpa/src/main/resources/templates/update-work.html
@@ -30,6 +30,11 @@
     </div>
 
     <div class="mb-3">
+        <label for="robotId" class="form-label">Robot Id</label>
+        <input type="number" class="form-control" id="robotId" name="robotId">
+    </div>
+
+    <div class="mb-3">
         <label for="name" class="form-label">Work Name</label>
         <input type="text" class="form-control" id="name" name="name">
     </div>
