--- a/SimpleRpa/src/main/resources/templates/new-work.html
+++ b/SimpleRpa/src/main/resources/templates/new-work.html
@@ -31,7 +31,7 @@
     </div>
     <div class="mb-3">
         <label for="contents" class="form-label">Contents</label>
-        <input type="text" class="form-control" id="contents" name="contents">
+        <textarea type="text" class="form-control" id="contents" name="contents"></textarea>
     </div>
     <div class="mb-3">
         <label for="schedulerCron" class="form-label">schedulerCron</label>
